refactor: minor changes

--- a/inequalities.html
+++ b/inequalities.html
@@ -45,13 +45,13 @@
         <hr class="bg-danger" style="width: 60%;" />
         <!-- ax+c>0 START -->
         <form autocomplete="off">
-            <h4 class="text-white">AX &#43; C &#62; 0</h4>
+            <h4 class="text-white"><var>ax &#43; c &#62; 0</var></h4>
             <div class="center-form">
-                <input type="number" id="a1" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a1" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="c1" placeholder="C" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c1" placeholder="c" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -71,13 +71,13 @@
         <!-- ax+c>=0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">AX &#43; C &#8805; 0</h4>
+            <h4 class="text-white"><var>ax &#43; c &#8805; 0</var></h4>
             <div class="center-form">
-                <input type="number" id="a2" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a2" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="c2" placeholder="C" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c2" placeholder="c" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -97,13 +97,13 @@
         <!-- ax+c<0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">AX &#43; C &#60; 0</h4>
+            <h4 class="text-white"><var>ax &#43; c &#60; 0</var></h4>
             <div class="center-form">
-                <input type="number" id="a3" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a3" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="c3" placeholder="C" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c3" placeholder="c" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -123,13 +123,13 @@
         <!-- ax+c<=0 START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">AX &#43; C &#8804; 0</h4>
+            <h4 class="text-white"><var>ax &#43; c &#8804; 0</var></h4>
             <div class="center-form">
-                <input type="number" id="a4" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a4" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="c4" placeholder="C" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c4" placeholder="c" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
