--- a/equations.html
+++ b/equations.html
@@ -44,13 +44,13 @@
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
         <form autocomplete="off">
-            <h4 class="text-white">X &#43; Y &#61; Z</h4>
+            <h4 class="text-white"><var>x &#43; y &#61; z</var></h4>
             <div class="center-form">
-                <input type="number" id="y" placeholder="Y" class="form-control mb-0" step="0.01" />
+                <input type="number" id="y" placeholder="y" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="z" placeholder="Z" class="form-control mb-0" step="0.01" />
+                <input type="number" id="z" placeholder="z" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -70,13 +70,13 @@
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">X &#8722; Y &#61; Z</h4>
+            <h4 class="text-white"><var>x &#8722; y &#61; z</var></h4>
             <div class="center-form">
-                <input type="number" id="y2" placeholder="Y" class="form-control mb-0" step="0.01" />
+                <input type="number" id="y2" placeholder="y" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="z2" placeholder="Z" class="form-control mb-0" step="0.01" />
+                <input type="number" id="z2" placeholder="z" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -96,13 +96,13 @@
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">Y &#215; X &#61; Z</h4>
+            <h4 class="text-white"><var>y &#215; x &#61; z</var></h4>
             <div class="center-form">
-                <input type="number" id="y3" placeholder="Y" class="form-control mb-0" step="0.01" />
+                <input type="number" id="y3" placeholder="y" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="z3" placeholder="Z" class="form-control mb-0" step="0.01" />
+                <input type="number" id="z3" placeholder="z" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
