--- a/linear-systems.html
+++ b/linear-systems.html
@@ -41,41 +41,41 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Linear 2x2 Systems; ax + by = c</h1>
+        <h1 class="text-white">Linear 2x2 Systems; <var>ax + by = c</var></h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h3 class="text-white">First Equation:</h3>
             <hr class="bg-danger" style="width: 50%;" />
-            <h4 class="text-white">Enter the value of <i>a</i></h4>
+            <h4 class="text-white">Enter the value of <var>a</var></h4>
             <div class="center-form">
-                <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a1" placeholder="a" name="a1" class="form-control mb-0" step="0.1" />
             </div>
             <br />
-            <h4 class="text-white">Enter the value of <i>b</i></h4>
+            <h4 class="text-white">Enter the value of <var>b</var></h4>
             <div class="center-form">
-                <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
+                <input type="number" id="b1" placeholder="b" name="b1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
-            <h4 class="text-white">Enter the value of <i>c</i></h4>
+            <h4 class="text-white">Enter the value of <var>c</var></h4>
             <div class="center-form">
-                <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c1" placeholder="c" name="c1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <h3 class="text-white">Second Equation:</h3>
             <hr class="bg-danger" style="width: 50%;" />
-            <h4 class="text-white">Enter the value of <i>a</i></h4>
+            <h4 class="text-white">Enter the value of <var>a</var></h4>
             <div class="center-form">
-                <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a2" placeholder="a" name="a2" class="form-control mb-0" step="0.1" />
             </div>
             <br />
-            <h4 class="text-white">Enter the value of <i>b</i></h4>
+            <h4 class="text-white">Enter the value of <var>b</var></h4>
             <div class="center-form">
-                <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.01" />
+                <input type="number" id="b2" placeholder="b" name="b2" class="form-control mb-0" step="0.1" />
             </div>
             <br>
-            <h4 class="text-white">Enter the value of <i>c</i></h4>
+            <h4 class="text-white">Enter the value of <var>c</var></h4>
             <div class="center-form">
-                <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c2" placeholder="c" name="c2" class="form-control mb-0" step="0.1" />
             </div>
             <br />
             <div class="center-form gap-2">
@@ -93,22 +93,22 @@
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
         <hr style="width: 60%;">
-        <h3>Case X = Y; ax + by = c</h3>
+        <h3>Case <var>x = y</var> (<var>ax + by = c</var>)</h3>
         <hr style="width: 50%;">
         <form autocomplete="off">
-            <h4 class="text-white">Enter the value of <i>a</i></h4>
+            <h4 class="text-white">Enter the value of <var>a</var></h4>
             <div class="center-form">
-                <input type="number" id="a3" placeholder="a" name="a1" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a3" placeholder="a" name="a1" class="form-control mb-0" step="0.1" />
             </div>
             <br />
-            <h4 class="text-white">Enter the value of <i>b</i></h4>
+            <h4 class="text-white">Enter the value of <var>b</var></h4>
             <div class="center-form">
-                <input type="number" id="b3" placeholder="b" name="b1" class="form-control mb-0" step="0.01" />
+                <input type="number" id="b3" placeholder="b" name="b1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
-            <h4 class="text-white">Enter the value of <i>c</i></h4>
+            <h4 class="text-white">Enter the value of <var>c</var></h4>
             <div class="center-form">
-                <input type="number" id="c3" placeholder="c" name="c1" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c3" placeholder="c" name="c1" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
