--- a/quadraticequations.html
+++ b/quadraticequations.html
@@ -44,13 +44,13 @@
         <hr class="bg-danger" style="width: 60%;" />
         <!-- ax^2=c START -->
         <form autocomplete="off">
-            <h4 class="text-white">AX&#178;+C=0</h4>
+            <h4 class="text-white"><var>ax&#178;+c=0</var></h4>
             <div class="center-form">
-                <input type="number" id="a" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="c" placeholder="C" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c" placeholder="c" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -70,13 +70,13 @@
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">AX&#178;+BX=0</h4>
+            <h4 class="text-white"><var>ax&#178;+bx=0</var></h4>
             <div class="center-form">
-                <input type="number" id="a2" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a2" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="b2" placeholder="B" class="form-control mb-0" step="0.01" />
+                <input type="number" id="b2" placeholder="b" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
@@ -96,17 +96,17 @@
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
         <form autocomplete="off">
-            <h4 class="text-white">AX&#178;+BX+C=0</h4>
+            <h4 class="text-white"><var>ax&#178;+bx+c=0</var></h4>
             <div class="center-form">
-                <input type="number" id="a3" placeholder="A" class="form-control mb-0" step="0.01" />
+                <input type="number" id="a3" placeholder="a" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="b3" placeholder="B" class="form-control mb-0" step="0.01" />
+                <input type="number" id="b3" placeholder="b" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="c3" placeholder="C" class="form-control mb-0" step="0.01" />
+                <input type="number" id="c3" placeholder="c" class="form-control mb-0" step="0.1" />
             </div>
             <br>
             <div class="center-form">
