--- a/roots.html
+++ b/roots.html
@@ -72,7 +72,7 @@
             </div>
             <br />
             <div class="center-form">
-                <input type="submit" id="cbrtcalc" class="btn btn-success btn-lg" value="Calculate Square Root" />
+                <input type="submit" id="cbrtcalc" class="btn btn-success btn-lg" value="Calculate Cube Root" />
             </div>
         </form>
         <br>
