prod: moved search box code into separate file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link rel="icon" href="https://www.mathflare.xyz/Assets/favicon.ico">
     <!-- SCRIPTS -->
-    <script data-ad-client="ca-pub-1524024547471266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-1524024547471266" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
@@ -111,8 +112,8 @@
                         class="donate-link">buymeacoffee</a>, <a href="https://ko-fi.com/mathflare" target="_blank"
                         rel="noopener" class="donate-link">Ko-fi</a>, <a href="https://patreon.com/mathflare"
                         target="_blank" rel="noopener" class="donate-link">Patreon</a> or <a
-                        href="https://www.paypal.me/mathflare" target="_blank"
-                        rel="noopener" class="donate-link">PayPal</a></p>
+                        href="https://www.paypal.me/mathflare" target="_blank" rel="noopener"
+                        class="donate-link">PayPal</a></p>
             </div>
         </div>
     </div>
@@ -120,6 +121,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script>
         if (typeof (Storage) !== 'undefined') {
             let storage = window.localStorage, pageCount;
@@ -142,9 +144,6 @@
         window.addEventListener('load', () => {
             document.querySelector('#home-link').classList.add('active');
         });
-        console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?", "font-family:consolas; font-size: 20px");
-        console.log("%cMathFlare", "color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
-        console.log("%cby the way, the curiosity killed the cat you know...", "color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
     </script>
     <script>
         if ('serviceWorker' in navigator) {
