--- a/linear-systems.html
+++ b/linear-systems.html
@@ -130,6 +130,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/linear-systems.js"></script>
     <script src="dist/linear-systems-x-equals-y.js"></script>
     <script>
