--- a/calculator.html
+++ b/calculator.html
@@ -75,6 +75,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/calc.js"></script>
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
