--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -442,6 +442,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/back-to-top.js"></script>
     <script>
         let storage = window.localStorage, formulas;
