--- a/cspeed.html
+++ b/cspeed.html
@@ -74,6 +74,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist//cspeed.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
