--- a/equations.html
+++ b/equations.html
@@ -124,6 +124,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/equations-first-deg.js"></script>
     <script>
         let storage = window.localStorage, equation;
