--- a/inequalities.html
+++ b/inequalities.html
@@ -151,6 +151,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/inequalities-first-deg.js"></script>
     <script>
         let storage = window.localStorage, ineq;
