--- a/quadraticequations.html
+++ b/quadraticequations.html
@@ -129,6 +129,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/equations-second-deg.js"></script>
     <script>
         let storage = window.localStorage, equation;
