--- a/roots.html
+++ b/roots.html
@@ -115,6 +115,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/sqrt.js"></script>
     <script src="dist/cbrt.js"></script>
     <script src="dist/nroot.js"></script>
