--- a/stats.html
+++ b/stats.html
@@ -45,6 +45,7 @@
     <script src="dist/jquery-3.6.0-min.js"></script>
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
+    <script src="dist/common.js"></script>
     <script src="dist/stats.js"></script>
     <script>
         let tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
