--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -443,6 +443,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <script src="dist/back-to-top.js"></script>
     <script>
         let storage = window.localStorage, formulas;
