--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <script src="https://hcaptcha.com/1/api.js?hl=en" async defer></script>
     <script src="dist/contact.mail.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
