--- a/equations.html
+++ b/equations.html
@@ -125,6 +125,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <script src="dist/equations-first-deg.js"></script>
     <script>
         let storage = window.localStorage, equation;
