--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <script>
         if (typeof (Storage) !== 'undefined') {
             let storage = window.localStorage, pageCount;
@@ -137,10 +138,6 @@
         } else {
             console.error('your browser does not support local storage');
         }
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        });
         window.addEventListener('load', () => {
             document.querySelector('#home-link').classList.add('active');
         });
