--- a/perimeter.html
+++ b/perimeter.html
@@ -178,6 +178,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <script src="dist/perimeter.js"></script>
     <script src="dist/perim-polyg.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
