--- a/quadraticequations.html
+++ b/quadraticequations.html
@@ -130,6 +130,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <script src="dist/equations-second-deg.js"></script>
     <script>
         let storage = window.localStorage, equation;
