--- a/tos.html
+++ b/tos.html
@@ -106,6 +106,7 @@
     <script src="dist/bootstrap-5.1-min.js"></script>
     <script src="dist/navbar.js"></script>
     <script src="dist/common.js"></script>
+    <script src="dist/main.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
