--- a/linear-systems.html
+++ b/linear-systems.html
@@ -11,7 +11,7 @@
     <meta name="og:title" content="MathFlare - Linear System Solver" />
     <meta name="twitter:title" content="MathFlare - Linear System Solver" />
     <meta name="keywords"
-        content="linear systems, system of equations solver, linear algebra, algebra, math, mathflare, math flare">
+        content="linear systems, linear algebar, linear systems of equations, system of equations solver, linear algebra, algebra, math, mathflare, math flare">
     <meta name="description" content="Easily solve 2x2 system of equations" />
     <meta name="og:description" content="Easily solve 2x2 system of equations" />
     <meta name="twitter:description" content="Easily solve 2x2 system of equations" />
