--- a/roots.html
+++ b/roots.html
@@ -88,12 +88,12 @@
         <form autocomplete="off">
             <h3 class="text-white">n<sup>th</sup> Root</h3>
             <div class="center-form">
-                <input type="number" id="nrootrad" placeholder="radicand" class="form-control mb-0" step="0.1"
+                <input type="number" id="nrootexp" placeholder="exponent" class="form-control mb-0" step="0.1"
                     min="0" />
             </div>
             <br />
             <div class="center-form">
-                <input type="number" id="nrootexp" placeholder="root" class="form-control mb-0" step="0.1"
+                <input type="number" id="nrootrad" placeholder="radicant" class="form-control mb-0" step="0.1"
                     min="0" />
             </div>
             <br> 
