prod: updated seo

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -10,7 +10,7 @@
     <meta name="title" content="MathFlare - Cheat Sheet">
     <meta name="og:title" content="MathFlare - Cheat Sheet" />
     <meta name="twitter:title" content="MathFlare - Cheat Sheet" />
-    <meta name="keywords" content="cheat sheet, formulas, math, algebra, geometry, trigonometry, mathflare, math flare">
+    <meta name="keywords" content="cheat sheet, formulas, math, algebra, geometry, trigonometry, identites, trigonometric numbers, powers of ten, factorials, mathflare, math flare">
     <meta name="description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="og:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="twitter:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
@@ -442,8 +442,9 @@
             </section>
             <section id="periodictable">
                 <h3>Periodic Table</h3>
-                <img src="Assets/periodic-table.png" alt="periodic table of elements" class="border" onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)"
-                    width="100%" height="100%" />
+                <img src="Assets/periodic-table.png" alt="periodic table of elements" class="border"
+                    onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
+                    height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
             </section>
         </div>
     </div>
