--- a/avg.html
+++ b/avg.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Calculate the average of a set of numbers." />
     <meta name="og:description" content="Calculate the average of a set of numbers." />
     <meta name="twitter:description" content="Calculate the average of a set of numbers." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/avg" />
     <link rel="canonical" href="https://www.mathflare.xyz/avg">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
