--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Fully functional simple calculator" />
     <meta name="og:description" content="Fully functional simple calculator" />
     <meta name="twitter:description" content="Fully functional simple calculator" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/calculator" />
     <link rel="canonical" href="https://www.mathflare.xyz/calculator">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
