--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Calculate the product of a complete hydrocarbon combustion." />
     <meta name="og:description" content="Calculate the product of a complete hydrocarbon combustion." />
     <meta name="twitter:description" content="Calculate the product of a complete hydrocarbon combustion." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/carboncombustions" />
     <link rel="canonical" href="https://www.mathflare.xyz/carboncombustions">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
