--- a/concentration.html
+++ b/concentration.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Calculate the solution concentration" />
     <meta name="og:description" content="Calculate the solution concentration" />
     <meta name="twitter:description" content="Calculate the solution concentration" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/concentration" />
     <link rel="canonical" href="https://www.mathflare.xyz/concentration">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
