--- a/cweight.html
+++ b/cweight.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Real time weight unit converter." />
     <meta name="og:description" content="Real time weight unit converter." />
     <meta name="twitter:description" content="Real time weight unit converter." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/cweight" />
     <link rel="canonical" href="https://www.mathflare.xyz/cweight">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
