--- a/diagpolyg.html
+++ b/diagpolyg.html
@@ -17,7 +17,7 @@
         content="Calculate the lenght and the number of diagonals in the most popular polygons." />
     <meta name="twitter:description"
         content="Calculate the lenght and the number of diagonals in the most popular polygons." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/diagpolyg" />
     <link rel="canonical" href="https://www.mathflare.xyz/diagpolyg">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
