--- a/displacement.html
+++ b/displacement.html
@@ -17,7 +17,7 @@
         content="Calculate the displacement, speed and displacement duration of a mobile object." />
     <meta name="twitter:description"
         content="Calculate the displacement, speed and displacement duration of a mobile object." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/displacement" />
     <link rel="canonical" href="https://www.mathflare.xyz/displacement">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
