--- a/handshake.html
+++ b/handshake.html
@@ -17,7 +17,7 @@
         content="Calculate the number of handshakes in a party based on the number of visitors." />
     <meta name="twitter:description"
         content="Calculate the number of handshakes in a party based on the number of visitors." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/handshake" />
     <link rel="canonical" href="https://www.mathflare.xyz/handshake">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
