--- a/imperfcarboncombust.html
+++ b/imperfcarboncombust.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Calculate the product of an imperfect hydrocarbon combustion." />
     <meta name="og:description" content="Calculate the product of an imperfect hydrocarbon combustion." />
     <meta name="twitter:description" content="Calculate the product of an imperfect hydrocarbon combustion." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/imperfcarboncombust" />
     <link rel="canonical" href="https://www.mathflare.xyz/imperfcarboncombust">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
