--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="mathflare, math-flare, math flare,geometry,mathematics,math,algebra,unitconverter,unit converter,converter,calculator,area calculator,logarithm,systems of equations solver,logarithm solver,square root,cude root,shapes,geometry,geometrical,highschool,math cheat sheet,pyhtagoras,pythagorian theorem,theorem,cheat sheet,math,equations,equation,solver,equation solver,linear-systems,linear system, system, equal triangle,similar triangle">
     <meta name="description"
         content="The go-to site for geometry and mathematics. Quadratic Equation Solver, Linear Algebra Solver, Diagonal Calculator, Unit Converter and many more available for free!" />
-    <meta name="author" content="MathFlare Co Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz" />
     <meta name="og:title" content="MathFlare" />
     <meta name="og:description"
