--- a/inequalities.html
+++ b/inequalities.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Easily solve 1st degree inequalities" />
     <meta name="og:description" content="Easily solve 1st degree inequalities" />
     <meta name="twitter:description" content="Easily solve 1st degree inequalities" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/inequalities" />
     <link rel="canonical" href="https://www.mathflare.xyz/inequalities">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
