--- a/linear-systems.html
+++ b/linear-systems.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Easily solve 2x2 system of equations" />
     <meta name="og:description" content="Easily solve 2x2 system of equations" />
     <meta name="twitter:description" content="Easily solve 2x2 system of equations" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/linear-systems" />
     <link rel="canonical" href="https://www.mathflare.xyz/linear-systems">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
