--- a/pow.html
+++ b/pow.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily calculate the exponent of a number" />
     <meta name="og:description" content="Easily calculate the exponent of a number" />
     <meta name="twitter:description" content="Easily calculate the exponent of a number" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/pow" />
     <link rel="canonical" href="https://www.mathflare.xyz/pow">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
