--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily calculate punnett square" />
     <meta name="og:description" content="Easily calculate punnett square" />
     <meta name="twitter:description" content="Easily calculate punnett square" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/punnettsquare" />
     <link rel="canonical" href="https://www.mathflare.xyz/punnettsquare">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
