--- a/quadraticequations.html
+++ b/quadraticequations.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily solve quadratic equations" />
     <meta name="og:description" content="Easily solve quadratic equations" />
     <meta name="twitter:description" content="Easily solve quadratic equations" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/quadraticequations" />
     <link rel="canonical" href="https://www.mathflare.xyz/quadraticequations">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
