--- a/round.html
+++ b/round.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily round numbers" />
     <meta name="og:description" content="Easily round numbers" />
     <meta name="twitter:description" content="Easily round numbers" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/round" />
     <link rel="canonical" href="https://www.mathflare.xyz/round">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
