--- a/area.html
+++ b/area.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Calculate the area of the most common geometrical shapes." />
     <meta name="og:description" content="Calculate the area of the most common geometrical shapes." />
     <meta name="twitter:description" content="Calculate the area of the most common geometrical shapes." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/area" />
     <link rel="canonical" href="https://www.mathflare.xyz/area">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
