--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="og:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
     <meta name="twitter:description" content="Complete algebra, geometry and trigonometry cheat sheet." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/cheatsheet" />
     <link rel="canonical" href="https://www.mathflare.xyz/cheatsheet">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
