--- a/clenght.html
+++ b/clenght.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Real time lenght unit converter." />
     <meta name="og:description" content="Real time lenght unit converter." />
     <meta name="twitter:description" content="Real time lenght unit converter." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/clenght" />
     <link rel="canonical" href="https://www.mathflare.xyz/clenght">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
