--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>MathFlare - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare - Contact">
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <link rel="canonical" href="https://www.mathflare.xyz/contact">
     <link rel="home" href="https://www.mathflare.xyz">
     <!-- STYLES -->
