--- a/ctemp.html
+++ b/ctemp.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Real time temperature unit converter." />
     <meta name="og:description" content="Real time temperature unit converter." />
     <meta name="twitter:description" content="Real time temperature unit converter." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/ctemp" />
     <link rel="canonical" href="https://www.mathflare.xyz/ctemp">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
