--- a/equations.html
+++ b/equations.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily solve 1st degree equations" />
     <meta name="og:description" content="Easily solve 1st degree equations" />
     <meta name="twitter:description" content="Easily solve 1st degree equations" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/equations" />
     <link rel="canonical" href="https://www.mathflare.xyz/equations">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
