--- a/fact.html
+++ b/fact.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Calculate factorials fast." />
     <meta name="og:description" content="Calculate factorials fast." />
     <meta name="twitter:description" content="Calculate factorials fast." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/fact" />
     <link rel="canonical" href="https://www.mathflare.xyz/fact">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
