--- a/logar.html
+++ b/logar.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily calculate logarithms" />
     <meta name="og:description" content="Easily calculate logarithms" />
     <meta name="twitter:description" content="Easily calculate logarithms" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/logar" />
     <link rel="canonical" href="https://www.mathflare.xyz/logar">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
