--- a/percent.html
+++ b/percent.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Easily calculate percentages" />
     <meta name="og:description" content="Easily calculate percentages" />
     <meta name="twitter:description" content="Easily calculate percentages" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/percent" />
     <link rel="canonical" href="https://www.mathflare.xyz/percent">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
