--- a/perimeter.html
+++ b/perimeter.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Easily calculate the perimeter of the most popular geometrical shapes." />
     <meta name="og:description" content="Easily calculate the perimeter of the most popular geometrical shapes." />
     <meta name="twitter:description" content="Easily calculate the perimeter of the most popular geometrical shapes." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/perimeter" />
     <link rel="canonical" href="https://www.mathflare.xyz/perimeter">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
