--- a/pointsdistance.html
+++ b/pointsdistance.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily calculate the distance between two points" />
     <meta name="og:description" content="Easily calculate the distance between two points" />
     <meta name="twitter:description" content="Easily calculate the distance between two points" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/pointsdistance" />
     <link rel="canonical" href="https://www.mathflare.xyz/pointsdistance">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
