--- a/prightside.html
+++ b/prightside.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Easily calculate the leg of a right triangle." />
     <meta name="og:description" content="Easily calculate the leg of a right triangle." />
     <meta name="twitter:description" content="Easily calculate the leg of a right triangle." />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/prightside" />
     <link rel="canonical" href="https://www.mathflare.xyz/prightside">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
