--- a/slope.html
+++ b/slope.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Easily calculate the slope of 2 coordinates" />
     <meta name="og:description" content="Easily calculate the slope of 2 coordinates" />
     <meta name="twitter:description" content="Easily calculate the slope of 2 coordinates" />
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <meta name="og:url" content="https://www.mathflare.xyz/slope" />
     <link rel="canonical" href="https://www.mathflare.xyz/slope">
     <meta name="og:image" content="https://www.mathflare.xyz/Assets/logo.png" />
