--- a/tos.html
+++ b/tos.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathFlare - ToS</title>
     <meta name="title" content="MathFlare - ToS">
-    <meta name="author" content="MathFlare Co. Ltd." />
+    <meta name="author" content="MathFlare.xyz" />
     <link rel="canonical" href="https://www.mathflare.xyz/tos">
     <!-- STYLES -->
     <link href="Styles/bootstrap-5.0-min.css" rel="stylesheet" />
     <link href="Styles/Scrollbar.css" rel="stylesheet" />
     <link href="Styles/Site.css" rel="stylesheet" />
-    
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="Assets/android-chrome-192x192.png" sizes=192x192>
@@ -31,16 +31,17 @@
     <div class="text-white m-4" style="margin-top: 7.5em !important;">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
-            <p>Your privacy is important to us. It is MathFlare&#39;s Co. Ltd. policy to respect your privacy and comply
+            <p>Your privacy is important to us. It is MathFlare&#39;s policy to respect your privacy and comply
                 with any applicable law and regulation regarding any personal information we may collect about you,
-                including across our website, <a href="https://www.mathflare.xyz">https://www.mathflare.xyz</a>, and other
+                including across our website, <a href="https://www.mathflare.xyz">https://www.mathflare.xyz</a>, and
+                other
                 sites we own and operate. </p>
             <p>This policy is effective as of 20 April 2021 and was last updated on 20 July 2021.</p>
         </section>
         <section id="important-notice">
             <h3>Important Notice</h3>
             <p>We rely on 3rd party software such as <i><a href="https://www.hcaptcha.com/terms">Human
-                        Captcha(hcaptcha)</a></i> and
+                        Captcha(hcaptcha)</a></i>, <i><a href="https://www.cloudflare.com/website-terms/">Cloudflare</a></i> and
                 <i>Postmail</i> for functionality and
                 protection. By using our website you knowingly agree to their Privacy Policy and Terms of Use as
                 well.
@@ -88,14 +89,14 @@
             <p>For any questions or concerns regarding your privacy, you may contact us using the following details:
             </p>
             <p>
-                MathFlare Co. Ltd.<br />
+                MathFlare.xyz<br />
                 mathflare@dkatsios.tk
             </p>
             <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
         <hr>
         <footer>
-            <p>&copy;2021 MathFlare Co. Ltd. - All rights reserved. - download the Terms of Service: <a
+            <p>&copy;2021 MathFlare.xyz - All rights reserved. - download the Terms of Service: <a
                     href="Assets/mathflare-tos.pdf" download>PDF</a>, <a href="Assets/mathflare-tos.docx"
                     download>DOCX</a>, <a href="Assets/mathflare-tos.txt" download>TXT</a></p>
         </footer>
