refactor: use local font

--- a/tos.html
+++ b/tos.html
@@ -41,7 +41,8 @@
         <section id="important-notice">
             <h3>Important Notice</h3>
             <p>We rely on 3rd party software such as <i><a href="https://www.hcaptcha.com/terms">Human
-                        Captcha(hcaptcha)</a></i>, <i><a href="https://www.cloudflare.com/website-terms/">Cloudflare</a></i> and
+                        Captcha(hcaptcha)</a></i>, <i><a
+                        href="https://www.cloudflare.com/website-terms/">Cloudflare</a></i> and
                 <i>Postmail</i> for functionality and
                 protection. By using our website you knowingly agree to their Privacy Policy and Terms of Use as
                 well.
@@ -89,8 +90,16 @@
             <p>For any questions or concerns regarding your privacy, you may contact us using the following details:
             </p>
             <p>
+                Damian<br />
+                dkatsios@mathflare.xyz
+            </p>
+            <p>
+                Sarantis<br />
+                smoutsatsos@mathflare.xyz
+            </p>
+            <p>
                 MathFlare.xyz<br />
-                mathflare@dkatsios.tk
+                contact@mathflare.xyz
             </p>
             <p>Or use our <a href="contact.html">Contact Form</a></p>
         </section>
