prod: added steps in unit converter

--- a/clenght.html
+++ b/clenght.html
@@ -46,37 +46,37 @@
             <h4 class="text-white">Feet</h4>
             <div class="center-form">
                 <input id="inputFeet" class="form-control mb-0" type="number" placeholder="Feet"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Meters</h4>
             <div class="center-form">
                 <input id="inputMeters" class="form-control mb-0" type="number" placeholder="Meters"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Inches</h4>
             <div class="center-form">
                 <input id="inputInches" class="form-control mb-0" type="number" placeholder="Inches"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">cm</h4>
             <div class="center-form">
                 <input id="inputcm" class="form-control mb-0" type="number" placeholder="cm"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Yards</h4>
             <div class="center-form">
                 <input id="inputYards" class="form-control mb-0" type="number" placeholder="Yards"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Kilometers</h4>
             <div class="center-form">
                 <input id="inputKilometers" class="form-control mb-0" type="number" placeholder="Kilometers"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Miles</h4>
             <div class="center-form">
                 <input id="inputMiles" class="form-control mb-0" type="number" placeholder="Miles"
-                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
+                    oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)" step="0.1">
             </div>
             <br>
             <div class="center-form">
