--- a/cspeed.html
+++ b/cspeed.html
@@ -47,22 +47,22 @@
             <h4 class="text-white m-2">MPH</h4>
             <div class="center-form">
                 <input id="inputMPH" class="form-control mb-0" type="number" placeholder="MPH"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">KPH</h4>
             <div class="center-form">
                 <input id="inputKPH" class="form-control mb-0" type="number" placeholder="KPH"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Knots</h4>
             <div class="center-form">
                 <input id="inputKnots" class="form-control mb-0" type="number" placeholder="Knots"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Mach</h4>
             <div class="center-form">
                 <input id="inputMach" class="form-control mb-0" type="number" placeholder="Mach"
-                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
+                    oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)" step="0.1">
             </div>
             <br>
             <div class="center-form">
