--- a/cweight.html
+++ b/cweight.html
@@ -46,27 +46,27 @@
             <h4 class="text-white">Pounds</h4>
             <div class="center-form">
                 <input id="inputPounds" class="form-control mb-0" type="number" placeholder="Pounds"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Kilograms</h4>
             <div class="center-form">
                 <input id="inputKilograms" class="form-control mb-0" type="number" placeholder="Kilograms"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Ounces</h4>
             <div class="center-form">
                 <input id="inputOunces" class="form-control mb-0" type="number" placeholder="Ounces"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Grams</h4>
             <div class="center-form">
                 <input id="inputGrams" class="form-control mb-0" type="number" placeholder="Grams"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Stones</h4>
             <div class="center-form">
                 <input id="inputStones" class="form-control mb-0" type="number" placeholder="Stones"
-                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
+                    oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)" step="0.1">
             </div>
             <br>
             <div class="center-form">
