--- a/ctemp.html
+++ b/ctemp.html
@@ -48,19 +48,19 @@
             <div class="center-form">
                 <input id="inputFahrenheit" class="form-control mb-0" type="number" min="-459.66999999999996"
                     placeholder="Fahrenheit" oninput="temperatureConverter(this.id,this.value)"
-                    onchange="temperatureConverter(this.id,this.value)">
+                    onchange="temperatureConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Celcius</h4>
             <div class="center-form">
                 <input id="inputCelsius" class="form-control mb-0" type="number" min="-273.15" placeholder="Celsius"
                     oninput="temperatureConverter(this.id,this.value)"
-                    onchange="temperatureConverter(this.id,this.value)">
+                    onchange="temperatureConverter(this.id,this.value)" step="0.1">
             </div>
             <h4 class="text-white m-2">Kelvin</h4>
             <div class="center-form">
                 <input id="inputKelvin" class="form-control mb-0" type="number" min="0" placeholder="Kelvin"
                     oninput="temperatureConverter(this.id,this.value)"
-                    onchange="temperatureConverter(this.id,this.value)">
+                    onchange="temperatureConverter(this.id,this.value)" step="0.1">
             </div>
             <br>
             <div class="center-form">
