--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     <!-- SCRIPTS -->
     <script data-ad-client="ca-pub-1524024547471266" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script type="text/javascript">
+        window._mNHandle = window._mNHandle || {};
+        window._mNHandle.queue = window._mNHandle.queue || [];
+        medianet_versionId = "3121199";
+    </script>
+    <script src="https://contextual.media.net/dmedianet.js?cid=8CU2PFO93" async="async"></script>
 </head>
 
 <body>
@@ -115,6 +121,18 @@
                         href="https://www.paypal.me/mathflare" target="_blank" rel="noopener"
                         class="donate-link">PayPal</a></p>
             </div>
+        </div>
+        <div id="511680788">
+            <script type="text/javascript">
+                try {
+                    window._mNHandle.queue.push(function () {
+                        window._mNDetails.loadTag("511680788", "970x90", "511680788");
+                    });
+                }
+                catch (error) {
+                    console.error(`Ad error: ${error.message}`);
+                }
+            </script>
         </div>
     </div>
     <!-- SCRIPTS START -->
