--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             </div>
         </form>
         <p id="user-message"></p>
-        <p><i class="bi bi-lightning"></i> Didn't work? why don't you send us an <a href="mailto:mathflare@pm.me"
+        <p><i class="bi bi-lightning"></i> Didn't work? why don't you send us an <a href="mailto:contact@mathflare.xyz"
                 target="_blank" rel="noopener">email</a>?</p>
     </div>
     <!-- SCRIPTS START -->
